--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="57dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/hoa" />
@@ -20,10 +20,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:text="Handicrafted"
+        android:text="Handicrafted by"
         android:textColor="#aaaaaa"
-        android:textSize="12sp"
+        android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
@@ -33,9 +32,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="19dp"
+        android:layout_marginStart="32dp"
         android:text="Jim HLS"
+        android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -43,102 +42,120 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="83dp"
-        android:layout_height="66dp"
+        android:layout_width="82dp"
+        android:layout_height="39dp"
         android:layout_marginEnd="220dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/logo" />
 
     <View
         android:id="@+id/view"
-        android:layout_width="410dp"
-        android:layout_height="121dp"
-        android:layout_marginTop="76dp"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="16dp"
         android:background="#29b363"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="347dp"
-        android:layout_height="42dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="35dp"
         android:text="A joke a day keep the doctor away "
+        android:textAlignment="center"
         android:textColor="#ECECEC"
-        android:textSize="20sp"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/view"
-        app:layout_constraintHorizontal_bias="0.721"
         app:layout_constraintStart_toStartOf="@+id/view"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="363dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="362dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="30dp"
         android:text="If you joke wrong way, your teeth have to pay. (Serious)"
+        android:textAlignment="center"
         android:textColor="#ECECEC"
-        android:textSize="14sp"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintHorizontal_bias="0.75"
+        app:layout_constraintHorizontal_bias="0.714"
         app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.333" />
 
     <Button
         android:id="@+id/btnLike"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="120dp"
         android:background="#2c7edb"
         android:text="This is Funny!"
+        android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textSize="12sp"
+        android:textStyle="normal"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.069"
+        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtContent" />
 
     <Button
         android:id="@+id/btndDslike"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_width="140dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="30dp"
         android:background="#29b363"
         android:text="This is not funny"
+        android:textAllCaps="false"
         android:textColor="@color/white"
+        android:textSize="12sp"
         app:backgroundTint="@null"
         app:layout_constraintBottom_toBottomOf="@+id/btnLike"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.464"
         app:layout_constraintStart_toEndOf="@+id/btnLike"
         app:layout_constraintTop_toTopOf="@+id/btnLike"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="362dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="24dp"
-        android:text='"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irueprehende'
+        android:layout_width="360dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="30dp"
+        android:gravity="center"
+        android:text='This appis created as part of HLsolutions program.The materials con-tained on this website are provides for general information only and do not constitute any form of advice. HLS assumes no responsilbility for the accuracy of any  particularr statement and accepts no liability for any loss or damage which may arise  from reliance on the infor-mation contained on this site'
         android:textColor="#9c9c9c"
-        android:textSize="10sp"
+        android:textSize="11sp"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/btnLike" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLike"
+        app:layout_constraintVertical_bias="0.729" />
 
     <TextView
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="5dp"
         android:text="Coppyright 2021 HLS"
         android:textColor="#7b7b7b"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -147,15 +164,16 @@
 
     <TextView
         android:id="@+id/txtContent"
-        android:layout_width="379dp"
-        android:layout_height="237dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
-        android:text="A child asked his father, &quot;How were people born?&quot; So his father said, &quot;Adam and Eve made babies, then their babies became adults and made babies, and so on.&quot;  The child then went to his mother, asked her the same question and she told him, &quot;We were monkeys then we evolved to become like we are now.&quot;  The child ran back to his father and said, &quot;You lied to me!&quot; His father replied, &quot;No, your mom was talking about her side of the family.&quot;"
+        android:layout_width="358dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="30dp"
+        android:text="A child asked his father, &quot;How were people born?&quot; So his father said, &quot;Adam and Eve made babies, then their babies became adults and made babies, and so on.&quot; The child then went to his mother, asked her the same question and she told him, &quot;We were monkeys then we evolved to become like we are now.&quot; The child ran back to his father and said, &quot;You lied to me!&quot; His father replied, &quot;No, your mom was talking about her side of the family.&quot;"
         android:textColor="#656565"
-        android:textSize="16sp"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
